@@ -83,6 +83,9 @@ Bug Fixes
 * SOLR-4842: Fix facet.field local params from affecting other facet.field's.
   (ehatcher, hossman) 
 
+* SOLR-4868: Setting the log level for the log4j root category results in
+  adding a new category, the empty string. (Shawn Heisey)
+
 Other Changes
 ----------------------
 
